--- a/forum.movie-website.conf
+++ b/forum.movie-website.conf
@@ -1,6 +1,6 @@
  <VirtualHost *:80>
       ServerAdmin webmaster@localhost
-      DocumentRoot /home/danny/Projects/web-frontend/forum.web
+      DocumentRoot /x/x/x/x/
       ServerName forum.localhost
 
       <Directory /home/danny/Projects/web-frontend/forum.web>
