--- a/movie-website.conf
+++ b/movie-website.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
         ServerAdmin webmaster@localhost
-        DocumentRoot /home/danny/Projects/web-frontend/web
+        DocumentRoot /x/x/x/x/x
         ServerName localhost
 
         <Directory /home/danny/Projects/web-frontend/web>
