Logging System can now read and send Apache error logs to everyone listening on RMQ (receiveLog)

--- a/forum.movie-website.conf
+++ b/forum.movie-website.conf
@@ -1,15 +1,20 @@
  <VirtualHost *:80>
       ServerAdmin webmaster@localhost
-      DocumentRoot /x/x/x/x/
+      DocumentRoot /x/x/x/x/x
       ServerName forum.localhost
 
-      <Directory /home/danny/Projects/web-frontend/forum.web>
+      <Directory /x/x/x/x/x>
                 Options FollowSymlinks
                 AllowOverride All
                 Require all granted
        </Directory>
 
-ErrorLog ${APACHE_LOG_DIR}/your-domain.com_error.log
-CustomLog ${APACHE_LOG_DIR}/your-domain.com_access.log combined
+
+#CustomLog "/x/x/x/x/x" common
+
+ErrorLog ${APACHE_LOG_DIR}/error.log
+
+#CustomLog ${APACHE_LOG_DIR}/access.log
+#CustomLog ${APACHE_LOG_DIR}/access.log combined
 
 </VirtualHost>
