--- a/movie-website.conf
+++ b/movie-website.conf
@@ -3,7 +3,7 @@
         DocumentRoot /x/x/x/x/x
         ServerName localhost
 
-        <Directory /home/danny/Projects/web-frontend/web>
+        <Directory /x/x/x/x/x>
                 Options FollowSymlinks
                 AllowOverride All
 		Require all granted 
@@ -11,6 +11,6 @@
         </Directory>
 
 ErrorLog ${APACHE_LOG_DIR}/error.log
-CustomLog ${APACHE_LOG_DIR}/access.log combined
+#CustomLog ${APACHE_LOG_DIR}/access.log combined
 
 </VirtualHost>
