Apache Configuration is now in 1 file and uses Alias's, Log files can read from Apache & STDERR

--- a/movie-website.conf
+++ b/movie-website.conf
@@ -1,16 +1,22 @@
 <VirtualHost *:80>
         ServerAdmin webmaster@localhost
-        DocumentRoot /x/x/x/x/x
+        DocumentRoot /root/to/website
         ServerName localhost
 
-        <Directory /x/x/x/x/x>
+        <Directory /root/to/website
                 Options FollowSymlinks
                 AllowOverride All
 		Require all granted 
-
         </Directory>
 
-ErrorLog ${APACHE_LOG_DIR}/error.log
-#CustomLog ${APACHE_LOG_DIR}/access.log combined
+        Alias /forum /root/to/forum
+        <Directory /root/to/forum>
+                Options FollowSymlinks
+                AllowOverride All
+                Require all granted
+        </Directory>
+
+        ErrorLog ${APACHE_LOG_DIR}/ApacheError.log
+
 
 </VirtualHost>
