--- a/movie-website.conf
+++ b/movie-website.conf
@@ -16,7 +16,7 @@
                 Require all granted
         </Directory>
 
-        ErrorLog ${APACHE_LOG_DIR}/ApacheError.log
+        ErrorLog ${APACHE_LOG_DIR}/error.log
 
 
 </VirtualHost>
